# cmake-findefi

./: .travis.yml  Dockerfile  Findefi.cmake  LICENSE  README.md
example/: CMakeLists.txt  main.c
